updated ScalacFork ant task to accept arbitry a...
updated ScalacFork ant task to accept arbitry arguments forwarded to the
forked jvm.